MA-520: implement terminology syndication to termhub.